fixed Layout issue on social button

--- a/css/style.css
+++ b/css/style.css
@@ -178,15 +178,18 @@ section#about {
     background-size: cover;
     padding: 30vh 0;
     background-attachment: fixed;
+    font-family: 'Nunito', sans-serif;
+    font-weight: 400;
 }
 .social-cont {
-    max-width: 400px;
+    max-width: 600px;
+    font-size: 13px;
 }
 a.btn-default {
     height: 44px;
-    border-radius: 0;
+    border-radius: 1px;
     border: 0;
-    width: 180px;
+    width: 150px;
     text-align: left;
     margin: 0 5px 10px 0;
     position: relative;
@@ -201,7 +204,7 @@ a.btn-default i {
     display: block;
     float: left;
     position: absolute;
-    left: 12px;
+    left: 10px;
     top: 10px;
     font-size: 24px;
     color: #FFFFFF;
@@ -211,7 +214,7 @@ a.btn-default i {
 a.btn-default span {
     position: relative;
     z-index: 1;
-    padding-left: 30px;
+    padding-left: 32px;
 }
 a.btn-default:after {
     content: '';
